Problem with mirror modifier and automatic wheigts! #41463

Closed
opened 2014-08-16 17:36:41 +02:00 by Ivam Pretti · 13 comments

System Information
Ubuntu 14.04, Intel onboard card

Blender Version 2.71 official release
Reproduceable: YES
Crash of Blender:NO

Short description of error
Mirror modifier assign wrong side bones automatic weights.

Exact steps for others to reproduce the error
Take a mesh with mirror modifier and symmetric armature, with bones named left and right. If you parent the armature with automatic weights you get a correct side of the weights and bones. If you enter on weight paint mode, hit w->automatic weights, the bones on the left side get the weights on the right side, and vice-verse.

System Information Ubuntu 14.04, Intel onboard card Blender Version 2.71 official release Reproduceable: YES Crash of Blender:NO Short description of error Mirror modifier assign wrong side bones automatic weights. Exact steps for others to reproduce the error Take a mesh with mirror modifier and symmetric armature, with bones named left and right. If you parent the armature with automatic weights you get a correct side of the weights and bones. If you enter on weight paint mode, hit w->automatic weights, the bones on the left side get the weights on the right side, and vice-verse.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ivampretti

Added subscriber: @ivampretti

Added subscriber: @mont29

Added subscriber: @mont29

Please always attach a small .blend file to reproduce the issue, it saves us tons of time.

Please always attach a small .blend file to reproduce the issue, it saves us tons of time.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2014-08-25 10:08:50 +02:00

No news in one week…

No news in one week…
Author

mirror_modifier_armature_bug.blend the bug still remains!

[mirror_modifier_armature_bug.blend](https://archive.blender.org/developer/F107899/mirror_modifier_armature_bug.blend) the bug still remains!

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Please be more reactive next time…

Please be more reactive next time…
Author

hahahahaha sorry, I did not understand that the bug would not be fixed whithout an attached file!

hahahahaha sorry, I did not understand that the bug would not be fixed whithout an attached file!

This issue was referenced by 5e3b63a22b

This issue was referenced by 5e3b63a22bfd2f0b6fb683f1ebcac1dc96fc1627

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5e3b63a22b.

Closed by commit 5e3b63a22b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41463
No description provided.