Fix T41463: Mirror Modifier breaks Automatic-Weights in weight-paint mode

The problem was it used copied verts on the opposite side.